# hwhkit-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE-MIT  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: contributing.md  getting-started.md  index.md
docs/concepts/: app-context.md  bootstrap.md  configuration.md  contracts.md  errors.md  index.md  integration-provider.md  observability.md  testing.md
docs/contracts/: index.md
docs/integrations/: index.md  llm.md  nats.md  postgres.md  redis.md  scheduler.md
docs/migration/: index.md
docs/recipes/: index.md  trading-service.md
docs/superpowers/: RELEASE-CHECKLIST.md  decisions.md
docs/superpowers/plans/: 2026-05-16-hwhkit-py-master-todo.md  2026-05-16-hwhkit-py-w1-foundation.md  2026-05-16-hwhkit-py-w2-bootstrap-web-otel.md  2026-05-17-hwhkit-py-w3-postgres-redis.md
docs/superpowers/specs/: 2026-05-16-hwhkit-py-production-readiness-design.md
hwhkit/: __init__.py
hwhkit/cli/: __init__.py  __main__.py  add.py  commands.py  inspect.py  scaffold.py
hwhkit/config/: __init__.py  base.py  schemas.py  sources.py
hwhkit/core/: __init__.py  bootstrap.py  context.py  errors.py  health.py  integration.py  jwt.py  shutdown.py
hwhkit/core/contracts/: __init__.py  cache.py  kv_store.py  llm.py  lock.py  message_bus.py  notifier.py  object_store.py  relational_db.py  scheduler.py  secrets.py  telemetry.py  vector_store.py
hwhkit/integrations/: __init__.py
hwhkit/integrations/mongodb/: __init__.py  config.py  provider.py
hwhkit/integrations/mysql/: __init__.py  config.py  provider.py
hwhkit/integrations/nats/: __init__.py  config.py  provider.py
hwhkit/integrations/neo4j/: __init__.py  config.py  provider.py
hwhkit/integrations/oss/: __init__.py  config.py  provider.py
hwhkit/integrations/postgres/: __init__.py  config.py  migrations.py  provider.py  session.py
hwhkit/integrations/qdrant/: __init__.py  config.py  provider.py
hwhkit/integrations/redis/: __init__.py  config.py  provider.py
hwhkit/integrations/s3/: __init__.py  config.py  provider.py
hwhkit/llm/: __init__.py  config.py  provider.py
hwhkit/observability/: __init__.py  instrumentation.py  logging.py  metrics.py  otel.py  tracing.py
hwhkit/scheduler/: __init__.py  config.py  decorators.py  provider.py
hwhkit/testing/: __init__.py  otel_recorder.py
hwhkit/testing/contract_tests/: __init__.py  cache.py  lock.py  message_bus.py  relational_db.py
hwhkit/testing/fakes/: __init__.py  cache.py  kv_store.py  lock.py  message_bus.py  relational_db.py  scheduler.py
hwhkit/utils/: __init__.py  decorators.py  encryption.py  hash.py  http.py
hwhkit/utils/notification/: feishu.py
hwhkit/web/: __init__.py  app.py  exceptions.py  responses.py  server.py  system_router.py
hwhkit/web/middleware/: __init__.py  auth.py  logging.py  metrics.py  request_id.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/concepts/: index.html
latest/concepts/app-context/: index.html
latest/concepts/bootstrap/: index.html
latest/concepts/configuration/: index.html
latest/concepts/contracts/: index.html
latest/concepts/errors/: index.html
latest/concepts/integration-provider/: index.html
latest/concepts/observability/: index.html
latest/concepts/testing/: index.html
latest/contracts/: index.html
latest/contributing/: index.html
latest/getting-started/: index.html
latest/integrations/: index.html
latest/integrations/llm/: index.html
latest/integrations/nats/: index.html
latest/integrations/postgres/: index.html
latest/integrations/redis/: index.html
latest/integrations/scheduler/: index.html
latest/migration/: index.html
latest/recipes/: index.html
latest/recipes/trading-service/: index.html
latest/search/: search_index.json
latest/superpowers/RELEASE-CHECKLIST/: index.html
latest/superpowers/decisions/: index.html
latest/superpowers/plans/2026-05-16-hwhkit-py-master-todo/: index.html
latest/superpowers/plans/2026-05-16-hwhkit-py-w1-foundation/: index.html
latest/superpowers/plans/2026-05-16-hwhkit-py-w2-bootstrap-web-otel/: index.html
latest/superpowers/plans/2026-05-17-hwhkit-py-w3-postgres-redis/: index.html
latest/superpowers/specs/2026-05-16-hwhkit-py-production-readiness-design/: index.html
tests/: conftest.py
tests/benchmark/: test_postgres_perf.py  test_redis_perf.py
tests/e2e/: test_sample_smoke.py
tests/e2e/sample_app/: main.py
tests/integration/: conftest.py
tests/integration/nats/: conftest.py  test_lifecycle.py
tests/integration/postgres/: test_contract_conformance.py  test_lifecycle.py
tests/integration/redis/: test_contract_conformance.py  test_lifecycle.py
tests/unit/: test_public_api.py  test_smoke.py
tests/unit/cli/: test_add.py  test_add_edge.py  test_cli.py  test_inspect_edge.py  test_main_entry.py  test_scaffold.py
tests/unit/config/: test_base.py  test_sources.py
tests/unit/core/: test_bootstrap.py  test_bootstrap_rollback.py  test_context.py  test_errors.py  test_health.py  test_integration.py  test_jwt.py  test_shutdown.py
tests/unit/core/contracts/: test_cache.py  test_dataclasses.py  test_protocols_are_runtime_checkable.py
tests/unit/integrations/: test_p2_placeholders.py
tests/unit/integrations/nats/: test_provider.py  test_provider_mocked.py
tests/unit/integrations/postgres/: test_migrations.py  test_provider.py
tests/unit/integrations/redis/: test_provider.py
tests/unit/llm/: test_provider.py
tests/unit/observability/: conftest.py  test_instrumentation.py  test_logging.py  test_metrics.py  test_otel.py  test_otel_branches.py  test_tracing.py
tests/unit/scheduler/: test_decorators.py  test_provider.py  test_provider_runtime.py
tests/unit/testing/: test_otel_recorder.py
tests/unit/utils/: test_decorators.py  test_encryption.py  test_feishu.py  test_hash.py  test_http.py
tests/unit/web/: test_app_and_system.py  test_exceptions_detail.py  test_responses.py  test_server.py  test_server_branches.py
(+9 files in other folders)
